# Hisu

./: .gitignore  DATASET_SOURCES.txt  DEPLOYMENT_SUMMARY.txt  FINAL_PROJECT_SUMMARY.txt  IMPLEMENTATION_PLAN.txt  IMPLEMENTATION_SUMMARY.txt  PROJECT_OVERVIEW.txt  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.txt  README.md  README.txt  TASK_COMPLETION.txt  TRAINING_SYSTEM_DOCUMENTATION.txt  advanced_model_trainer.py  anime_hindi_chatbot.py  colab_train.py  colab_train_optimized.py  comprehensive_ai_trainer.py  config.yaml  create_csv_datasets.py  create_datasets.py  evaluate.py  example_classification.py  example_neural_network.py  example_regression.py  example_usage.py  expand_datasets.py  fast_retrain.py  generate_model.py  inference.py  main.py  predict.py  production_training_pipeline.py  pyproject.toml  quick_inference_test.py  quick_train.py  requirements.txt  retrain_model_improved.py  setup.cfg  setup.py  (+8 more)
config/: __init__.py  experiment_config.py  model_config.py  training_config.py
configs/: config_loader.py  default_config.py
data/datasets/: anime_knowledge_dataset.csv  conversational_training_data.csv  factual_knowledge_dataset.csv  hindi_english_parallel_corpus.csv  instruction_following_dataset.csv  mixed_language_dataset.csv  question_answer_dataset.csv  reasoning_dataset.csv
data/tokenizer/: tokenizer.json
docs/: FINAL_TRAINING_REPORT.txt  MODEL_GENERATION_COMPLETE.txt  PROJECT_STATUS.txt  SAMPLE_RESPONSES.txt  USAGE_GUIDE.txt
examples/: regression_example.py  simple_classification.py
llm/config/: config.py
llm/data/: 2.txt
llm/model/: dataset.py  transformer.py
llm/scripts/: chat.py  generate.py  test.py  train.py
models/: training_report.txt  training_results.json
models/production/: deployment_decision.json  generation_report.txt  model_metadata.json  training_results.json
models/production_final/: TRAINING_REPORT.txt  VALIDATION_REPORT.txt  checkpoint_iter_1.json  checkpoint_iter_14.json  checkpoint_iter_2.json  checkpoint_iter_26.json  checkpoint_iter_28.json  checkpoint_iter_32.json  checkpoint_iter_36.json  checkpoint_iter_37.json  checkpoint_iter_39.json  checkpoint_iter_44.json  checkpoint_iter_47.json  checkpoint_iter_5.json  checkpoint_iter_61.json  checkpoint_iter_64.json  (+11 more)
scripts/: train.py
src/: __init__.py
training_data/: README.md  advanced_queries.csv  anime_knowledge.csv  conversational_training.csv  hindi_english_mix.csv  instruction_following.csv  reasoning_responses.csv
(+85 files in other folders)
