[metadata]
name = ai-ml-environment
version = 0.1.0
description = Modular scaffolding for AI/ML experimentation

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    torch
    torchvision
    torchaudio
    tensorflow
    keras
    matplotlib
    seaborn
    plotly
    jupyter
    notebook
    ipykernel
    mlflow
    optuna
    tqdm
    hydra-core
    omegaconf
    pydantic
    fastapi
    uvicorn[standard]
    requests
    python-dotenv
    black
    ruff
    pytest
    pytest-cov
python_requires = ~=3.10

[options.extras_require]
deep-learning =
    accelerate
    transformers
    datasets
    sentencepiece
    einops
    bitsandbytes
    peft

[options.package_data]
ais_ml_env =
    py.typed

[flake8]
max-line-length = 88
extend-ignore = E203, W503
